minor change for public release

--- a/ProbaVis_testing.ipynb
+++ b/ProbaVis_testing.ipynb
@@ -26,14 +26,11 @@
     "import importlib\n",
     "\n",
     "import pandas as pd\n",
+    "from ipywidgets import interactive\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
-    "# from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, HistGradientBoostingClassifier\n",
     "from sklearn.datasets import make_classification\n",
-    "\n",
-    "from ipywidgets import interactive\n",
     "\n",
     "import multiclass_proba_contour as mpc"
    ]
@@ -43,20 +40,9 @@
    "execution_count": 2,
    "id": "da553e0d-0b5c-456b-91f5-ea166b7a7c7e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'multiclass_proba_contour' from 'C:\\\\Users\\\\Semyon\\\\Documents\\\\Python\\\\20_Projects\\\\mpc_clone\\\\multiclass-proba-contour_new\\\\multiclass_proba_contour.py'>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "importlib.reload(mpc)"
+    "# importlib.reload(mpc)"
    ]
   },
   {
@@ -193,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16f8c35a6f0643e2ad0cf5bd219b8375",
+       "model_id": "85b264986fe74c5b9e57a1886081eeff",
        "version_major": 2,
        "version_minor": 0
       },
